# gbm-tools

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
src/gbm_tools/: __init__.py  cli.py
src/gbm_tools/convert/: __init__.py
src/gbm_tools/diff/: __init__.py
src/gbm_tools/formats/: __init__.py  bintex.py  gbm_module.py  gbm_reader.py  gbm_writer.py  vri.py
src/gbm_tools/inspect/: __init__.py
src/gbm_tools/rtf/: __init__.py
src/gbm_tools/usfm/: __init__.py
tests/: __init__.py  test_diff.py  test_gbm_format.py  test_vri.py
tests/fixtures/: tiny.gbm
