[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gbm-tools"
version = "0.1.0"
description = "Converter and builder CLI for .gbm Bible/literature modules"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "GADSDA / maximurm", email = "max@gadsda.com" }
]
keywords = ["bible", "yes2", "gbm", "literature", "ellen-white", "shepherds-rod"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Religion",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "click>=8.1",
    "python-snappy>=0.7",
    "pyyaml>=6.0",
    "rich>=13.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
    "types-PyYAML",
]
release = [
    "pyinstaller>=6.6",
]

[project.scripts]
gbm-convert     = "gbm_tools.cli:convert"
gbm-build       = "gbm_tools.cli:build"
gbm-inspect     = "gbm_tools.cli:inspect"
gbm-diff        = "gbm_tools.cli:diff"
gbm-test        = "gbm_tools.cli:test"
gbm-index-parse = "gbm_tools.cli:index_parse"

[project.urls]
Homepage = "https://github.com/maximurm/gbm-tools"
Issues = "https://github.com/maximurm/goldenBowlWeb/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/gbm_tools"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "N"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"

[tool.mypy]
python_version = "3.11"
strict = true
